plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
	id "org.sonarqube" version "6.0.1.5171"
	id 'jacoco'
}

group = 'com.iss.renterscore'
version = '0.0.1'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}
tasks.named('bootJar') {
	archiveFileName = "spring-boot-api-${project.version}.jar"
}
tasks.named('jar') {
	enabled = false
}
dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

	implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.9'
	// https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310
	implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.9.8'
	// https://mvnrepository.com/artifact/org.freemarker/freemarker
	implementation group: 'org.freemarker', name: 'freemarker', version: '2.3.34'
	implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
	// https://mvnrepository.com/artifact/org.freemarker/freemarker
	implementation group: 'net.jodah', name: 'expiringmap', version: '0.5.9'
	// https://mvnrepository.com/artifact/org.passay/passay
	implementation group: 'org.passay', name: 'passay', version: '1.6.0'
	// https://mvnrepository.com/artifact/org.apache.poi/poi
	implementation group: 'org.apache.poi', name: 'poi', version: '5.0.0'
	// https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
//	implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.0.0'

	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
	annotationProcessor 'org.projectlombok:lombok'

	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.0'
	implementation 'com.sendgrid:sendgrid-java:4.10.1'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.junit.jupiter:junit-jupiter'
	testImplementation 'org.junit.jupiter:junit-jupiter-api'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'

	testImplementation 'org.mockito:mockito-core'
	testImplementation 'org.mockito:mockito-junit-jupiter'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	testImplementation 'com.h2database:h2'
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy tasks.named('jacocoTestReport')
}

jacoco {
	toolVersion = "0.8.11" // or latest stable
}

tasks.named('jacocoTestReport', JacocoReport) {
	dependsOn tasks.named('test') // tests are required to run before generating the report
	reports {
		xml.required = true
		html.required.set(true)
		csv.required = false
	//	html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
	}

	classDirectories.setFrom(fileTree(dir: "$buildDir/classes/java/main", excludes: ['**/config/**', '**/dto/**']))
	sourceDirectories.setFrom(files('src/main/java'))
	executionData.setFrom(fileTree(dir: buildDir, includes: ['jacoco/test.exec', 'jacoco/test*.exec']))
}

tasks.named("jacocoTestCoverageVerification", JacocoCoverageVerification) {
	dependsOn tasks.named("test")

	violationRules {
		rule {
			limit {
				minimum = 0.10
			}
		}
	}

	classDirectories.setFrom(fileTree(dir: "$buildDir/classes/java/main", excludes: ['**/config/**', '**/dto/**']))
	sourceDirectories.setFrom(files('src/main/java'))
	executionData.setFrom(fileTree(dir: buildDir, includes: ['jacoco/test.exec']))
}
check.dependsOn tasks.named("jacocoTestCoverageVerification")


sonar {
	properties {
		property "sonar.projectKey", "Innovations-Technology_renter_score_authentication"
		property "sonar.organization", "innovations-technology"
		property "sonar.host.url", "https://sonarcloud.io"
	}
}